[tool.poetry]
name = "pymailtm"
version = "1.1.1"
description = "A python web api wrapper and command line client for mail.tm."

license = "GPL-3.0-only"

authors = [
  "Carlo De Pieri <depieri.carlo@gmail.com>"
]

readme = 'README.md'

repository = "https://github.com/CarloDePieri/pymailtm"
homepage = "https://github.com/CarloDePieri/pymailtm"

packages = [
  { include = "pymailtm" }
]

keywords = ["mail", "temp", "mail.tm"]

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Communications :: Email",
  "Topic :: Communications :: Email :: Email Clients (MUA)",
  "Topic :: Utilities"
]

[tool.poetry.scripts]
pymailtm = 'pymailtm.cli:init'

[tool.poetry.dependencies]
python = ">=3.8.1,<3.13"
requests = "^2.32.3"
random-username = "^1.0.2"
pyperclip = "^1.9.0"
pydantic = "^2.8.2"

[tool.poetry.dev-dependencies]
anyio = "^4.4.0"
yagmail = "^0.15.283"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
pytest-sugar = "^1.0.0"
pytest-spec = "^4.0.0"
pytest-timeout = "^2.3.1"
coveralls = "^4.0.1"
PyYAML = "^6.0.1"
pytest-recording = "^0.13.2"
pytest-vcr-delete-on-fail = "^2.0.1"
python-dotenv = "^1.0.1"
vcrpy-encrypt = "^0.9.1"

[tool.poetry.group.dev.dependencies]
black = {extras = ["d"], version = "^24.8.0"}
requests-mock = "^1.12.1"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
